Allow handles through for official builds too (partial revert)

This is a (very) partial revert of
https://codereview.chromium.org/1291553003 to fix the crash reported in
https://bugs.chromium.org/p/chromium/issues/detail?id=625172#c21. I
started trying to dig into making renderers log, but it's still a hairy
mess.

R=wfh@chromium.org
BUG=625172, 358267, 579196
TEST=out\Release\chrome.exe http://www.bbc.co.uk/news/world-asia-china-36189636 --enable-logging=stderr > log.txt 2>&1 where chrome is is_official_build=true shouldn't crash.

Review-Url: https://codereview.chromium.org/2198603002
Cr-Commit-Position: refs/heads/master@{#409318}

Former-commit-id: 5f2967d15fe53b2bd0cec15dd22fdff3b86e1ca9